[gd_scene load_steps=14 format=3 uid="uid://vfo3rr6e4u5k"]

[ext_resource type="Script" path="res://scenes/Levels/level_0.gd" id="1_qc154"]
[ext_resource type="TileSet" uid="uid://d3k1ar04o4po5" path="res://scenes/tileset.tres" id="2_347re"]
[ext_resource type="PackedScene" uid="uid://b4w1u18aercdb" path="res://scenes/player.tscn" id="3_l6uxw"]
[ext_resource type="PackedScene" uid="uid://cwpg2sneyq6rf" path="res://scenes/player2.tscn" id="4_t0vyo"]
[ext_resource type="PackedScene" uid="uid://dtpn5wksg1o0v" path="res://scenes/coin.tscn" id="5_sfuku"]
[ext_resource type="PackedScene" uid="uid://dicdpchxv8chk" path="res://scenes/platform.tscn" id="6_pcpmr"]
[ext_resource type="PackedScene" uid="uid://cmr01mlt3f52b" path="res://scenes/dog.tscn" id="8_lea76"]
[ext_resource type="PackedScene" uid="uid://dks5ja8qmje3m" path="res://scenes/car.tscn" id="10_5ti11"]
[ext_resource type="Texture2D" uid="uid://dagfys8l4bq0" path="res://assets/background/forest.jpg" id="12_jj2qj"]
[ext_resource type="Texture2D" uid="uid://x6cm55pk0dwy" path="res://assets/Wedding_Hunter_Logo.png" id="13_tjg2v"]
[ext_resource type="AudioStream" uid="uid://rh8bsrvj33ro" path="res://assets/sounds/car-engine-switched-off.mp3" id="15_jmaug"]
[ext_resource type="AudioStream" uid="uid://cqyh2yaioforr" path="res://assets/sounds/car_engine_fail.mp3" id="16_fojjw"]
[ext_resource type="PackedScene" uid="uid://dir78bid8yy53" path="res://scenes/music.tscn" id="17_3hqik"]

[node name="Level0" type="Node2D"]
script = ExtResource("1_qc154")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(1, 0)
tile_set = ExtResource("2_347re")
format = 2
layer_0/name = "Background"
layer_0/tile_data = PackedInt32Array(-524288, 393221, 0, -458740, 65541, 2, -458738, 196613, 2, -327682, 131076, 2, -393218, 131076, 2, -458754, 131076, 2, -524290, 131076, 2, -524291, 131076, 2, -589828, 131076, 2, -589827, 131076, 2, -655365, 131076, 2, -655364, 131076, 2, -720901, 131076, 2, -720902, 131076, 2, -720903, 131076, 2, -262146, 131076, 2, -262147, 131076, 2, -327683, 131076, 2, -393219, 131076, 2, -458755, 131076, 2, -458756, 131076, 2, -524292, 131076, 2, -524293, 131076, 2, -589829, 131076, 2, -589830, 131076, 2, -655366, 131076, 2, -655367, 131076, 2, -589831, 131076, 2, -524294, 131076, 2, -458758, 131076, 2, -393222, 131076, 2, -327686, 131076, 2, -262149, 131076, 2, -196612, 131076, 2, -262148, 131076, 2, -327684, 131076, 2, -327685, 131076, 2, -393221, 131076, 2, -393220, 131076, 2, -458757, 131076, 2, -458759, 131076, 2, -524295, 131076, 2, -393223, 131076, 2, -327687, 131076, 2, -262151, 131076, 2, -196615, 131076, 2, -196614, 131076, 2, -196613, 131076, 2, -262150, 131076, 2, -196609, 5, 5, -262144, 5, 5, -262143, 5, 5, -262142, 5, 5, -262141, 5, 5, -262140, 5, 5, -262139, 5, 5, -262138, 5, 5, -262137, 5, 5, -262136, 5, 5, -262135, 5, 5, -262134, 5, 5, -262133, 5, 5, -262132, 5, 5, -262130, 5, 5, -262129, 5, 5, -262128, 5, 5, -262127, 5, 5, -262126, 5, 5, -262125, 5, 5, -262124, 5, 5, -262123, 5, 5, -196586, 5, 5, -196587, 5, 5, -196588, 5, 5, -196589, 5, 5, -196590, 5, 5, -196591, 5, 5, -196592, 5, 5, -196593, 5, 5, -196594, 5, 5, -196596, 5, 5, -196597, 5, 5, -196598, 5, 5, -196599, 5, 5, -196600, 5, 5, -196601, 5, 5, -196602, 5, 5, -196603, 5, 5, -196604, 5, 5, -196605, 5, 5, -196606, 5, 5, -196607, 5, 5, -196608, 5, 5, -131073, 5, 5, -131047, 5, 5, -131048, 5, 5, -131049, 5, 5, -131050, 5, 5, -131051, 5, 5, -131052, 5, 5, -131060, 5, 5, -131061, 5, 5, -131062, 5, 5, -131058, 5, 5, -131057, 5, 5, -131056, 5, 5, -131055, 5, 5, -131054, 5, 5, -131053, 5, 5, -131063, 5, 5, -131064, 5, 5, -131065, 5, 5, -131066, 5, 5, -131067, 5, 5, -131068, 5, 5, -131069, 5, 5, -131070, 5, 5, -131071, 5, 5, -131072, 5, 5, -65537, 5, 5, -786438, 131076, 2, -786439, 131076, 2, -786440, 131076, 2, -851976, 131076, 2, -917512, 131076, 2, -983048, 131076, 2, -1048584, 131076, 2, -1048585, 131076, 2, -1048586, 131076, 2, -1114122, 131076, 2, -1114123, 131076, 2, -1179660, 131076, 2, -1179661, 131076, 2, -1245197, 131076, 2, -1245196, 131076, 2, -1114124, 131076, 2, -1048588, 131076, 2, -983052, 131076, 2, -917517, 131076, 2, -917516, 131076, 2, -851980, 131076, 2, -851979, 131076, 2, -786443, 131076, 2, -720906, 131076, 2, -655370, 131076, 2, -589834, 131076, 2, -524298, 131076, 2, -458761, 131076, 2, -393225, 131076, 2, -327689, 131076, 2, -262152, 131076, 2, -196616, 131076, 2, -393224, 131076, 2, -458760, 131076, 2, -524296, 131076, 2, -589832, 131076, 2, -655368, 131076, 2, -720905, 131076, 2, -786441, 131076, 2, -851977, 131076, 2, -917513, 131076, 2, -917514, 131076, 2, -983050, 131076, 2, -851978, 131076, 2, -786442, 131076, 2, -655371, 131076, 2, -655372, 131076, 2, -720908, 131076, 2, -786444, 131076, 2, -1048587, 131076, 2, -983051, 131076, 2, -917515, 131076, 2, -983049, 131076, 2, -1114125, 131076, 2, -1048589, 131076, 2, -983053, 131076, 2, -851981, 131076, 2, -786445, 131076, 2, -720909, 131076, 2, -655373, 131076, 2, -589837, 131076, 2, -524301, 131076, 2, -458765, 131076, 2, -393229, 131076, 2, -327693, 131076, 2, -262157, 131076, 2, -196621, 131076, 2, -131085, 131076, 2, -65549, 131076, 2, -65548, 131076, 2, -131084, 131076, 2, -196619, 131076, 2, -262155, 131076, 2, -327691, 131076, 2, -393227, 131076, 2, -458763, 131076, 2, -524299, 131076, 2, -589835, 131076, 2, -589836, 131076, 2, -524300, 131076, 2, -458764, 131076, 2, -131083, 131076, 2, -327692, 131076, 2, -262156, 131076, 2, -196620, 131076, 2, -393228, 131076, 2, -393226, 131076, 2, -327690, 131076, 2, -262153, 131076, 2, -262154, 131076, 2, -196618, 131076, 2, -131082, 131076, 2, -131081, 131076, 2, -131080, 131076, 2, -131079, 131076, 2, -131078, 131076, 2, -131077, 131076, 2, -131076, 131076, 2, -131075, 131076, 2, -131074, 131076, 2, -196610, 131076, 2, -196611, 131076, 2, -196617, 131076, 2, -327688, 131076, 2, -458762, 131076, 2, -524297, 131076, 2, -589833, 131076, 2, -655369, 131076, 2, -720904, 131076, 2, -720907, 131076, 2, -65538, 131076, 2, -65539, 131076, 2, -65540, 131076, 2, -65541, 131076, 2, -65542, 131076, 2, -65543, 131076, 2, -65544, 131076, 2, -65545, 131076, 2, -65546, 131076, 2, -65547, 131076, 2, -65511, 5, 5, -65512, 5, 5, -65513, 5, 5, -65514, 5, 5, -65515, 5, 5, -65516, 5, 5, -65517, 5, 5, -65518, 5, 5, -65519, 5, 5, -65520, 5, 5, -65521, 5, 5, -65522, 5, 5, -65523, 5, 5, -65524, 5, 5, -65525, 5, 5, -65526, 5, 5, -65527, 5, 5, -65528, 5, 5, -65529, 5, 5, -65530, 5, 5, -65531, 5, 5, -65532, 5, 5, -65533, 5, 5, -65534, 5, 5, -65535, 5, 5, -65536, 5, 5, -1, 5, 5, -2, 5, 5, -3, 5, 5, -4, 5, 5, -5, 5, 5, -6, 5, 5, -7, 5, 5, -8, 5, 5, -9, 5, 5, -10, 5, 5, 65527, 5, 5, 65528, 5, 5, 65529, 5, 5, 65530, 5, 5, 65531, 5, 5, 65532, 5, 5, 65533, 5, 5, 65534, 5, 5, 65535, 5, 5, 0, 5, 5, 1, 5, 5, 2, 5, 5, 3, 5, 5, 4, 5, 5, 5, 5, 5, 6, 5, 5, 7, 5, 5, 8, 5, 5, 9, 5, 5, 65546, 5, 5, 65547, 5, 5, 65548, 5, 5, 65549, 5, 5, 65545, 5, 5, 65544, 5, 5, 65543, 5, 5, 65542, 5, 5, 65541, 5, 5, 65540, 5, 5, 65539, 5, 5, 65526, 5, 5, 65525, 5, 5, 131083, 5, 5, 131084, 5, 5, 131085, 5, 5, 131086, 5, 5, 131087, 5, 5, 131088, 5, 5, 131089, 5, 5, 131090, 5, 5, 196627, 5, 5, 196628, 5, 5, 196629, 5, 5, 196630, 5, 5, 196626, 5, 5, 196625, 5, 5, 196624, 5, 5, 196623, 5, 5, 196622, 5, 5, 196621, 5, 5, 131082, 5, 5, 131081, 5, 5, 131080, 5, 5, 131079, 5, 5, 131078, 5, 5, 131077, 5, 5, 131076, 5, 5, 131075, 5, 5, 131074, 5, 5, 131073, 5, 5, 131072, 5, 5, 131091, 5, 5, 131092, 5, 5, 131093, 5, 5, 131094, 5, 5, 131095, 5, 5, 131096, 5, 5, 131097, 5, 5, 196633, 5, 5, 196632, 5, 5, 196631, 5, 5, 65538, 5, 5, 65550, 5, 5, 65551, 5, 5, 65552, 5, 5, 65553, 5, 5, 65554, 5, 5, 65555, 5, 5, 65556, 5, 5, 65557, 5, 5, 22, 5, 5, 23, 5, 5, 24, 5, 5, 25, 5, 5, 21, 5, 5, 20, 5, 5, 19, 5, 5, 18, 5, 5, 17, 5, 5, 16, 5, 5, 15, 5, 5, 14, 5, 5, 65558, 5, 5, 65559, 5, 5, 65560, 5, 5, 65561, 5, 5, 196610, 5, 5, 196609, 5, 5, 196608, 5, 5, 262143, 5, 5, 262142, 5, 5, 262141, 5, 5, 196606, 5, 5, 196607, 5, 5, 196619, 5, 5, 196620, 5, 5, 196614, 5, 5, 196613, 5, 5, 196615, 5, 5, 196616, 5, 5, 196617, 5, 5, 196618, 5, 5, 13, 5, 5, 12, 5, 5, 11, 5, 5, 10, 5, 5, 196612, 5, 5, 196611, 5, 5, 196605, 5, 5, 196604, 5, 5, 196603, 5, 5, 196602, 5, 5, 196601, 5, 5, 196600, 5, 5, 196599, 5, 5, 131063, 5, 5, 131064, 5, 5, 131070, 5, 5, 131071, 5, 5, 65536, 5, 5, 65537, 5, 5, 131069, 5, 5, 131068, 5, 5, 131067, 5, 5, 131066, 5, 5, 131065, 5, 5, 131062, 5, 5, 196598, 5, 5, 262140, 5, 5, 262139, 5, 5, 262135, 5, 5, 262136, 5, 5, 262137, 5, 5, 262138, 5, 5, 262134, 5, 5, 327670, 5, 5, 393206, 5, 5, 458742, 5, 5, 524278, 5, 5, 589814, 5, 5, 655350, 5, 5, 720886, 5, 5, 327671, 5, 5, 393207, 5, 5, 458743, 5, 5, 524279, 5, 5, 589815, 5, 5, 655351, 5, 5, 720887, 5, 5, 327672, 5, 5, 393208, 5, 5, 458744, 5, 5, 524280, 5, 5, 589816, 5, 5, 655352, 5, 5, 720888, 5, 5, 327673, 5, 5, 393209, 5, 5, 458745, 5, 5, 524281, 5, 5, 589817, 5, 5, 655353, 5, 5, 720889, 5, 5, 327674, 5, 5, 393210, 5, 5, 458746, 5, 5, 524282, 5, 5, 589818, 5, 5, 655354, 5, 5, 720890, 5, 5, 327675, 5, 5, 393211, 5, 5, 458747, 5, 5, 524283, 5, 5, 589819, 5, 5, 655355, 5, 5, 720891, 5, 5, 327676, 5, 5, 393212, 5, 5, 458748, 5, 5, 524284, 5, 5, 589820, 5, 5, 655356, 5, 5, 720892, 5, 5, 327677, 5, 5, 393213, 5, 5, 458749, 5, 5, 524285, 5, 5, 589821, 5, 5, 655357, 5, 5, 720893, 5, 5, 327678, 5, 5, 393214, 5, 5, 458750, 5, 5, 524286, 5, 5, 589822, 5, 5, 655358, 5, 5, 720894, 5, 5, 327679, 5, 5, 393215, 5, 5, 458751, 5, 5, 524287, 5, 5, 589823, 5, 5, 655359, 5, 5, 720895, 5, 5, 262144, 5, 5, 327680, 5, 5, 393216, 5, 5, 458752, 5, 5, 524288, 5, 5, 589824, 5, 5, 655360, 5, 5, 262145, 5, 5, 327681, 5, 5, 393217, 5, 5, 458753, 5, 5, 524289, 5, 5, 589825, 5, 5, 655361, 5, 5, 262146, 5, 5, 327682, 5, 5, 393218, 5, 5, 458754, 5, 5, 524290, 5, 5, 589826, 5, 5, 655362, 5, 5, 262147, 5, 5, 327683, 5, 5, 393219, 5, 5, 458755, 5, 5, 524291, 5, 5, 589827, 5, 5, 655363, 5, 5, 262148, 5, 5, 327684, 5, 5, 393220, 5, 5, 458756, 5, 5, 524292, 5, 5, 589828, 5, 5, 655364, 5, 5, 262149, 5, 5, 327685, 5, 5, 393221, 5, 5, 458757, 5, 5, 524293, 5, 5, 589829, 5, 5, 655365, 5, 5, 262150, 5, 5, 327686, 5, 5, 393222, 5, 5, 458758, 5, 5, 524294, 5, 5, 589830, 5, 5, 655366, 5, 5, 262151, 5, 5, 327687, 5, 5, 393223, 5, 5, 458759, 5, 5, 524295, 5, 5, 589831, 5, 5, 655367, 5, 5, 262152, 5, 5, 327688, 5, 5, 393224, 5, 5, 458760, 5, 5, 524296, 5, 5, 589832, 5, 5, 655368, 5, 5, 262153, 5, 5, 327689, 5, 5, 393225, 5, 5, 458761, 5, 5, 524297, 5, 5, 589833, 5, 5, 655369, 5, 5, 262154, 5, 5, 327690, 5, 5, 393226, 5, 5, 458762, 5, 5, 524298, 5, 5, 589834, 5, 5, 655370, 5, 5, 262155, 5, 5, 327691, 5, 5, 393227, 5, 5, 458763, 5, 5, 524299, 5, 5, 589835, 5, 5, 655371, 5, 5, 262156, 5, 5, 327692, 5, 5, 393228, 5, 5, 458764, 5, 5, 524300, 5, 5, 589836, 5, 5, 655372, 5, 5, 262157, 5, 5, 327693, 5, 5, 393229, 5, 5, 458765, 5, 5, 524301, 5, 5, 589837, 5, 5, 655373, 5, 5, 262158, 5, 5, 327694, 5, 5, 393230, 5, 5, 458766, 5, 5, 524302, 5, 5, 589838, 5, 5, 655374, 5, 5, 262159, 5, 5, 327695, 5, 5, 393231, 5, 5, 458767, 5, 5, 524303, 5, 5, 589839, 5, 5, 655375, 5, 5, 262160, 5, 5, 327696, 5, 5, 393232, 5, 5, 458768, 5, 5, 524304, 5, 5, 589840, 5, 5, 655376, 5, 5, 262161, 5, 5, 327697, 5, 5, 393233, 5, 5, 458769, 5, 5, 524305, 5, 5, 589841, 5, 5, 655377, 5, 5, 262162, 5, 5, 327698, 5, 5, 393234, 5, 5, 458770, 5, 5, 524306, 5, 5, 589842, 5, 5, 655378, 5, 5, 262163, 5, 5, 327699, 5, 5, 393235, 5, 5, 458771, 5, 5, 524307, 5, 5, 589843, 5, 5, 655379, 5, 5, 262164, 5, 5, 327700, 5, 5, 393236, 5, 5, 458772, 5, 5, 524308, 5, 5, 589844, 5, 5, 655380, 5, 5, 262165, 5, 5, 327701, 5, 5, 393237, 5, 5, 458773, 5, 5, 524309, 5, 5, 589845, 5, 5, 655381, 5, 5, 262166, 5, 5, 327702, 5, 5, 393238, 5, 5, 458774, 5, 5, 524310, 5, 5, 589846, 5, 5, 655382, 5, 5, 262167, 5, 5, 327703, 5, 5, 393239, 5, 5, 458775, 5, 5, 524311, 5, 5, 589847, 5, 5, 655383, 5, 5, 262168, 5, 5, 327704, 5, 5, 262169, 5, 5, 327705, 5, 5, 786422, 5, 5, 851958, 5, 5, 917494, 5, 5, 983030, 5, 5, 1048566, 5, 5, 786423, 5, 5, 851959, 5, 5, 917495, 5, 5, 983031, 5, 5, 1048567, 5, 5, 786424, 5, 5, 851960, 5, 5, 917496, 5, 5, 983032, 5, 5, 1048568, 5, 5, 786425, 5, 5, 851961, 5, 5, 917497, 5, 5, 983033, 5, 5, 1048569, 5, 5, 786426, 5, 5, 851962, 5, 5, 917498, 5, 5, 983034, 5, 5, 1048570, 5, 5, 786427, 5, 5, 851963, 5, 5, 917499, 5, 5, 983035, 5, 5, 1048571, 5, 5, 786428, 5, 5, 851964, 5, 5, 917500, 5, 5, 983036, 5, 5, 1048572, 5, 5, 786429, 5, 5, 851965, 5, 5, 917501, 5, 5, 983037, 5, 5, 1048573, 5, 5, 786430, 5, 5, 851966, 5, 5, 917502, 5, 5, 983038, 5, 5, 1048574, 5, 5, 786431, 5, 5, 851967, 5, 5, 917503, 5, 5, 983039, 5, 5, 1048575, 5, 5, 720896, 5, 5, 786432, 5, 5, 851968, 5, 5, 917504, 5, 5, 983040, 5, 5, 720897, 5, 5, 786433, 5, 5, 851969, 5, 5, 917505, 5, 5, 983041, 5, 5, 720898, 5, 5, 786434, 5, 5, 851970, 5, 5, 917506, 5, 5, 983042, 5, 5, 720899, 5, 5, 786435, 5, 5, 851971, 5, 5, 917507, 5, 5, 983043, 5, 5, 720900, 5, 5, 786436, 5, 5, 851972, 5, 5, 917508, 5, 5, 983044, 5, 5, 720901, 5, 5, 786437, 5, 5, 851973, 5, 5, 917509, 5, 5, 983045, 5, 5, 720902, 5, 5, 786438, 5, 5, 851974, 5, 5, 917510, 5, 5, 983046, 5, 5, 720903, 5, 5, 786439, 5, 5, 851975, 5, 5, 917511, 5, 5, 983047, 5, 5, 720904, 5, 5, 786440, 5, 5, 851976, 5, 5, 917512, 5, 5, 983048, 5, 5, 720905, 5, 5, 786441, 5, 5, 851977, 5, 5, 917513, 5, 5, 983049, 5, 5, 720906, 5, 5, 786442, 5, 5, 851978, 5, 5, 917514, 5, 5, 983050, 5, 5, 720907, 5, 5, 786443, 5, 5, 851979, 5, 5, 917515, 5, 5, 983051, 5, 5, 720908, 5, 5, 786444, 5, 5, 851980, 5, 5, 917516, 5, 5, 983052, 5, 5, 720909, 5, 5, 786445, 5, 5, 851981, 5, 5, 917517, 5, 5, 983053, 5, 5, 720910, 5, 5, 786446, 5, 5, 851982, 5, 5, 917518, 5, 5, 983054, 5, 5, 720911, 5, 5, 786447, 5, 5, 851983, 5, 5, 917519, 5, 5, 983055, 5, 5, 720912, 5, 5, 786448, 5, 5, 851984, 5, 5, 917520, 5, 5, 983056, 5, 5, 720913, 5, 5, 786449, 5, 5, 851985, 5, 5, 917521, 5, 5, 983057, 5, 5, 720914, 5, 5, 786450, 5, 5, 851986, 5, 5, 917522, 5, 5, 983058, 5, 5, 720915, 5, 5, 786451, 5, 5, 851987, 5, 5, 917523, 5, 5, 983059, 5, 5, 720916, 5, 5, 786452, 5, 5, 851988, 5, 5, 917524, 5, 5, 983060, 5, 5, 720917, 5, 5, 786453, 5, 5, 851989, 5, 5, 917525, 5, 5, 983061, 5, 5, 720918, 5, 5, 786454, 5, 5, 851990, 5, 5, 917526, 5, 5, 983062, 5, 5, 720919, 5, 5, 786455, 5, 5, 851991, 5, 5, 917527, 5, 5, 983063, 5, 5, -13, 5, 5, 65523, 5, 5, 131059, 5, 5, 196595, 5, 5, 262131, 5, 5, 327667, 5, 5, 393203, 5, 5, 458739, 5, 5, 524275, 5, 5, 589811, 5, 5, 655347, 5, 5, 720883, 5, 5, 786419, 5, 5, 851955, 5, 5, 917491, 5, 5, 983027, 5, 5, 1048563, 5, 5, -12, 5, 5, 65524, 5, 5, 131060, 5, 5, 196596, 5, 5, 262132, 5, 5, 327668, 5, 5, 393204, 5, 5, 458740, 5, 5, 524276, 5, 5, 589812, 5, 5, 655348, 5, 5, 720884, 5, 5, 786420, 5, 5, 851956, 5, 5, 917492, 5, 5, 983028, 5, 5, 1048564, 5, 5, -11, 5, 5, 131061, 5, 5, 196597, 5, 5, 262133, 5, 5, 327669, 5, 5, 393205, 5, 5, 458741, 5, 5, 524277, 5, 5, 589813, 5, 5, 655349, 5, 5, 720885, 5, 5, 786421, 5, 5, 851957, 5, 5, 917493, 5, 5, 983029, 5, 5, 1048565, 5, 5, -131059, 5, 5, -196595, 5, 5, -524284, 393221, 0)
layer_1/name = "Midground"
layer_1/tile_data = PackedInt32Array(-393202, 196613, 3, -393201, 196613, 3, -393200, 196613, 3, -393199, 196613, 3, -393198, 196613, 3, -393197, 196613, 3, -393196, 196613, 3, -393195, 262149, 3, -327658, 262149, 3, -262121, 196613, 3, -262120, 196613, 3, -262119, 196613, 3, -327657, 131072, 0, -327655, 131072, 0, -458734, 131072, 0, -327656, 65536, 0, -393204, 196613, 3, -393205, 196613, 3, -393206, 196613, 3, -393207, 196613, 3, -393208, 196613, 3, -393209, 196613, 3, -393210, 196613, 3, -393211, 196613, 3, -393212, 196613, 3, -393213, 196613, 3, -393214, 196613, 3, -393215, 196613, 3, -393216, 196613, 3, -327681, 196613, 3, -393203, 196613, 3, -262131, 5, 5)

[node name="Player" parent="." instance=ExtResource("3_l6uxw")]
unique_name_in_owner = true
z_index = 5
position = Vector2(289, -228)

[node name="Player2" parent="." instance=ExtResource("4_t0vyo")]
unique_name_in_owner = true
position = Vector2(258, -228)

[node name="Coins" type="Node" parent="."]

[node name="Area2D" parent="Coins" instance=ExtResource("5_sfuku")]
position = Vector2(856, -227)

[node name="Area2D2" parent="Coins" instance=ExtResource("5_sfuku")]
position = Vector2(750, -228)

[node name="Coin" parent="Coins" instance=ExtResource("5_sfuku")]
position = Vector2(431, -225)

[node name="Platforms" type="Node" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource("6_pcpmr")]
position = Vector2(854, -196)

[node name="Platform6" parent="Platforms" instance=ExtResource("6_pcpmr")]
position = Vector2(739, -196)

[node name="Platform7" parent="Platforms" instance=ExtResource("6_pcpmr")]
position = Vector2(777, -196)

[node name="Platform8" parent="Platforms" instance=ExtResource("6_pcpmr")]
position = Vector2(815, -196)

[node name="Dog" parent="." instance=ExtResource("8_lea76")]
unique_name_in_owner = true
position = Vector2(349, -204)

[node name="Car" parent="." instance=ExtResource("10_5ti11")]
position = Vector2(-29, -222)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(277, 163)
scale = Vector2(0.618206, 0.606318)
texture = ExtResource("12_jj2qj")

[node name="Music" parent="." instance=ExtResource("17_3hqik")]
autoplay = false
max_distance = 50000.0

[node name="car_engine_switch_off" parent="." instance=ExtResource("17_3hqik")]
stream = ExtResource("15_jmaug")
autoplay = false
max_distance = 50000.0

[node name="engine_dead" parent="." instance=ExtResource("17_3hqik")]
stream = ExtResource("16_fojjw")
autoplay = false
max_distance = 50000.0

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(-88, -406)
scale = Vector2(0.137695, 0.137695)
texture = ExtResource("13_tjg2v")

[connection signal="finished" from="car_engine_switch_off" to="." method="_on_car_engine_switch_off_finished"]
[connection signal="finished" from="engine_dead" to="." method="_on_engine_dead_finished"]
